[package]
name = "socialnetwork"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
polodb_core = "5.1.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
